[package]
name = "special-patch"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"

### Parser
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"

### Paralell computing
rayon = "1.5.3"
rayon-hash = "0.5.0"

### CLI
clap = { version = "3.1.18", features = ["derive"] }

### Logging
log = "0.4.17"
env_logger = "0.9.0"

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-fmt"] }
